kubernetes/apps/default/pve/app/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pve
spec:
  hostnames:
    - "pve.gismo2004.cc"
  parentRefs:
    - name: envoy-internal
      namespace: network
  rules:
    - backendRefs:
        - group: gateway.envoyproxy.io
          kind: Backend
          name: pve
